# PyAV-wrapper

./: .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  avframe-direct-manipulation.md  pyproject.toml  raw_subprocess_pipe_stream_writer_main.py
.serena/: project.yml
.serena/memories/: completion_tasks.md  project_overview.md  structure.md  style_conventions.md  suggested_commands.md  tech_stack.md
src/pyav_wrapper/: __init__.py  audio_frame.py  raw_subprocess_pipe_stream_listener.py  raw_subprocess_pipe_stream_writer.py  stream_listener.py  stream_writer.py  video_frame.py
tests/: conftest.py  test_audio_frame.py  test_integration.py  test_raw_subprocess_pipe_stream_listener.py  test_raw_subprocess_pipe_stream_writer.py  test_shared_memory_resource_tracker.py  test_stream_listener.py  test_stream_writer.py  test_video_frame.py
