[project]
name = "pyav-wrapper"
version = "0.1.23"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Azunyan1111", email = "admin@mail.azunyan1111.com" }
]
requires-python = ">=3.12"
dependencies = [
    "av>=14.0.0",
    "numpy>=1.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.0.0",
    "python-dotenv>=1.0.0",
    "yappi>=1.7.3",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
timeout = 30
addopts = "-v -n auto -m 'not srt'"
testpaths = ["tests"]
markers = [
    "srt: SRT E2Eテスト（ffmpegによるSRT送信が必要）",
]
